# HorseRacing

./: .gitignore  EDA_SJ.ipynb  EDA_V2.ipynb  README.md  Sports Analytics Notes.gdoc  pyproject.toml
data/raw/: horse_ids.csv  horse_names.csv
notebooks/: 0_data_ingestion_MG.ipynb  1_EDA_SJ.ipynb  SLv1.py  SLv2.py  data_ingestion.ipynb  horseFunctions.py
src/ingestion/: preprocessing_pipeline.py
