[project]
name = "horseracing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.28.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]
